--- a/src/shop-cart.html
+++ b/src/shop-cart.html
@@ -62,7 +62,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <div class="checkout-box">
           Total: <span class="subtotal">[[_formatTotal(total)]]</span>
           <shop-button responsive>
-            <button on-tap="_buyCart" type="button">Checkout</button>
+            <!-- <button on-tap="_buyCart" type="button">Checkout</button> -->
+            <a href="/checkout">Checkout</a>
           </shop-button>
         </div>
       </div>
