Optimization for Google Pay

--- a/src/shop-app.html
+++ b/src/shop-app.html
@@ -271,8 +271,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     -->
     <shop-payment-request
         id="paymentRequest"
-        page="[[page]]"
-        total="[[total]]"
+        can-make-g-pay="{{gPayAvailable}}"
+        can-make-payment-request="{{prAvailable}}"
         currency="USD"
         request-payer-email
         request-payer-phone
@@ -374,7 +374,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <!-- cart view -->
       <shop-cart name="cart" cart="[[cart]]" total="[[total]]"></shop-cart>
       <!-- checkout view -->
-      <shop-checkout name="checkout" cart="[[cart]]" total="[[total]]" route="{{subroute}}"></shop-checkout>
+      <shop-checkout name="checkout" cart="[[cart]]" total="[[total]]" route="{{subroute}}" g-pay-available="[[gPayAvailable]]" pr-available="[[prAvailable]]"></shop-checkout>
       <!-- account view -->
       <shop-account name="account" profile="[[profile]]" route="[[subroute]]" prefilled-email="[[userEmail]]" selected="[[_pageSelected(page, 'account')]]"></shop-account>
 
@@ -448,6 +448,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         // Custom elements polyfill safe way to indicate an element has been upgraded.
         this.removeAttribute('unresolved');
         this.payment = this.$.paymentRequest;
+        this.payment.initialize();
         // listen for custom events
         this.addEventListener('add-cart-item', (e)=>this._onAddCartItem(e));
         this.addEventListener('set-cart-item', (e)=>this._onSetCartItem(e));
@@ -680,7 +681,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         .then(instrument => {
           return this._processPayment(instrument, true);
         }).catch(err => {
-console.error(err);
           if (err.statusCode === 'DEVELOPER_ERROR') {
             console.error('There\'s a configuration error');
             // Do nothing
@@ -711,6 +711,7 @@ console.error(err);
           if (instrumentResponse.complete) {
             instrumentResponse.complete('success')
           }
+          this.payment.initialize();
           if (cartBuy) {
             this.dispatchEvent(new CustomEvent('clear-cart', {
               bubbles: true, composed: true
